--- a/web/moniwiki/.htaccess
+++ b/web/moniwiki/.htaccess
@@ -3,6 +3,6 @@
 Options All -Indexes
 
 # http로 접속 시 https 로 강제 리다이렉트
-RewriteEngine On 
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [QSA,L,R=301]
+# RewriteEngine On 
+# RewriteCond %{SERVER_PORT} 80
+# RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [QSA,L,R=301]
