--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "silex/silex": "~1.3",
     "monolog/monolog": "~1.7",
     "twig/twig": "^1.19",
-    "symfony/twig-bridge": "^2.7",
-    "php": "^5.5.0"
+    "symfony/twig-bridge": "^2.7"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
